# resumakr-v0

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  resume.json  resume.master.yaml  resume.yaml
resumakr/: api.py  cli.py  resume.schema.json  schemas.py
resumakr/src/: cli.py
resumakr/src/database/: cli.py  connection.py  crud.py  resumakr.db
resumakr/src/schemas/: cli.py  resume.schema.json  schemas.py
resumakr/templates/: resume.tex.j2
resumakr/templates/sections/: certs.tex.j2  education.tex.j2  experience.tex.j2  projects.tex.j2  skills.tex.j2
