[project]
name = "resumakr-v0"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.29.0",
    "pydantic>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "typer>=0.25.1",
]

[project.scripts]
resumakr = "resumakr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resumakr"]
